@@ -273,7 +273,7 @@ void wxClipboardCallback( Widget xwidget, long* data_id,
 
     wxCharBuffer buffer(size);
     size_t count = dobj->GetFormatCount( wxDataObject::Get );
-    wxDataFormatScopedArray dfarr( new wxDataFormat[count] );
+    wxDataFormatScopedArray dfarr(count);
     dobj->GetAllFormats( dfarr.get(), wxDataObject::Get );
 
     if( !dobj->GetDataHere( dfarr[*priv], buffer.data() ) )
@@ -315,7 +315,7 @@ bool wxClipboard::AddData( wxDataObject *data )
         return false;
 
     size_t count = data->GetFormatCount( wxDataObject::Get );
-    wxDataFormatScopedArray dfarr( new wxDataFormat[count] );
+    wxDataFormatScopedArray dfarr(count);
     data->GetAllFormats( dfarr.get(), wxDataObject::Get );
 
 #if defined(__INTEL_COMPILER) // VDM auto patch
@@ -449,7 +449,7 @@ bool wxClipboard::GetData( wxDataObject& data )
     int count;
     unsigned long max_name_length;
     size_t dfcount = data.GetFormatCount( wxDataObject::Set );
-    wxDataFormatScopedArray dfarr( new wxDataFormat[dfcount] );
+    wxDataFormatScopedArray dfarr(dfcount);
     data.GetAllFormats( dfarr.get(), wxDataObject::Set );
 
     if( XmClipboardInquireCount( xdisplay, xwindow, &count, &max_name_length )
