@@ -884,7 +884,7 @@ size_t wxMenu::CopyAccels(wxAcceleratorEntry *accels) const
 wxAcceleratorTable *wxMenu::CreateAccelTable() const
 {
     const size_t count = m_accels.size();
-    wxScopedArray<wxAcceleratorEntry> accels(new wxAcceleratorEntry[count]);
+    wxScopedArray<wxAcceleratorEntry> accels(count);
     CopyAccels(accels.get());
 
     return new wxAcceleratorTable(count, accels.get());
